fix: remove word wrapping

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,6 +13,7 @@ body {
   line-height: 1.5rem;
   background-color: var(--black);
   color: var(--white);
+  hyphens: unset;
 }
 
 body::-webkit-scrollbar {
